--- a/public/css/users/profil.css
+++ b/public/css/users/profil.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Anton');
-
-
 /* .profil{
     
 } */
@@ -64,7 +61,7 @@
     text-align: center;
     position: relative;
     left: -1.6rem;
-    top: 0.3rem;
+    top: -12.7rem;
 }
 
 .message-profil{
@@ -101,22 +98,22 @@
 
 .profil{
     position: relative;
-    top: 2rem;
-    left: 12rem;
-    width: 70rem;
+    top: 16rem;
+    left: 2rem;
+    width: 100%;
     height: 57rem;
     background-color: grey;
 }
 
 .infoProfil {
     position: relative;
-    top: 7rem;
-    left: 4rem;
+    top: -21rem;
+    left: 36rem;
 }
 
 .img-profil {
     position: relative;
-    left: 8.4rem;
+    left: 3.4rem;
     top: -5rem;
 }
 
