--- a/views/worldChat.html
+++ b/views/worldChat.html
@@ -55,13 +55,13 @@
                             <div class="ms-body">
                                 <div class="listview lv-message">
                                     <div class="lv-header-alt clearfix">
-                                        <div id="ms-menu-trigger">
+                                        <!-- <div id="ms-menu-trigger">
                                             <div class="line-wrap">
                                                 <div class="line top"></div>
                                                 <div class="line center"></div>
                                                 <div class="line bottom"></div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="lvh-label hidden-xs col-md-6">
                                             <!-- <div class="lv-avatar pull-left">
                                             <img src="./images/bhai.jpg" alt="">
@@ -70,7 +70,7 @@
                                                 <span style="left: 5rem; position: absolute; top: 1.3rem; width: 8px; height: 8px; line-height: 8px; border-radius: 50%; background-color: #80d3ab;"></span>
                                             </span>
                                         </div>
-                                        <ul class="lv-actions actions list-unstyled list-inline">
+                                        <!-- <ul class="lv-actions actions list-unstyled list-inline">
                                             <li>
                                                 <a href="#">
                                                     <i class="fa fa-check"></i>
@@ -104,7 +104,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                        </ul>
+                                        </ul> -->
                                     </div>
                                     <div class="lv-body" id="ms-scrollbar" style="overflow:scroll; overflow-x: hidden; height: 29.7rem;" scroll-glue="glued">
                                         <div ng-repeat="msg in messages | orderBy: '-id_message':true" ng-cloak>
