--- a/public/css/users/profil.css
+++ b/public/css/users/profil.css
@@ -2,7 +2,9 @@
     
 } */
 
+
 /* TOP NAV */
+
 .user-row {
     margin-bottom: 14px;
 }
@@ -21,25 +23,23 @@
     cursor: pointer;
 }
 
-.table-user-information > tbody > tr {
+.table-user-information>tbody>tr {
     border-top: 1px solid rgb(221, 221, 221);
 }
 
-.table-user-information > tbody > tr:first-child {
+.table-user-information>tbody>tr:first-child {
     border-top: 0;
 }
 
-
-.table-user-information > tbody > tr > td {
+.table-user-information>tbody>tr>td {
     border-top: 0;
 }
-.toppad
-{
-    margin-top:20px;
+
+.toppad {
+    margin-top: 20px;
 }
 
-
-.infoUser{
+.infoUser {
     position: relative;
     top: -21rem;
     right: -9rem;
@@ -50,26 +50,25 @@
     font-size: 1.4rem;
 }
 
-.username{
+.username {
     position: absolute;
     top: 0.7rem;
-
 }
 
-
-.welcome-profil{
+.welcome-profil {
+    justify-content: center;
     text-align: center;
     position: relative;
-    top: -12.7rem;
     width: 100%;
+    flex-direction: row;
 }
 
-.message-profil{
+.message-profil {
     color: #d1d1d1;
     font-size: 6.9rem;
 }
 
-.img-user{
+.img-user {
     width: 9rem;
     height: auto;
     position: relative;
@@ -77,7 +76,7 @@
     left: 0rem;
 }
 
-.form-profil{
+.form-profil {
     height: 0rem;
     width: 21rem;
     position: absolute;
@@ -85,58 +84,41 @@
     background-color: white;
 }
 
-
-
-#username{
+#username {
     position: relative;
     top: 1.8rem;
     font-size: 1.3rem;
 }
 
+
 /* PROFIL */
 
-.profil{
+.profil {
     position: relative;
     top: 16rem;
     width: 100%;
-    height: 33rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     background-color: grey;
 }
 
 .infoProfil {
-    position: relative;
-    top: -16rem;
-    left: 39rem;
-    width: 33rem;
-    height: 14rem;
+    display: flex;
+    flex-direction: column;
+    width: 17rem;
+    margin-left: 1rem;
+    justify-content: space-around;
+    margin: 2rem;
 }
 
 .img-profil {
-    position: relative; 
-    left: 10.4rem; 
-    top: -2rem; 
-    width: 23%; 
-} 
- 
-.username-profil { 
-    position: relative;
-    top: 4rem;  
+    width: 25rem;
+    height: 25rem;
 }
 
 
-/* .profil input{
-    color: black;
+/* .username-profil {
     position: relative;
-    bottom: -7rem;
-    left: -10.3rem;
-}
- */
-
-
-/* 
-.selectfile {
-    color: black;
-    position: relative;
-    top: 7rem;
-    left: -11rem;
+    top: 4rem;
 } */
