--- a/views/users/profil.html
+++ b/views/users/profil.html
@@ -11,30 +11,38 @@
             <span class="hamb-bottom"></span>
         </button>
         <!-- Content -->
-        <div class="container">
-            <canvas id="c"></canvas>
-            <div class="profil" ng-controller='profil'>
-
-                
-        <form action="/getFile" enctype="multipart/form-data" method="post">
-            <!-- <input type="file" name="file-to-upload">
-            <input type="submit" value="Upload"> -->
-          </form>
+        <div style="    display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;">
+            <canvas id="c">
+            </canvas>
+            <div ng-controller='profil' style="        width: auto;">
                 <div class="welcome-profil">
                     <h1 class="message-profil">{{ message }}</h1>
                 </div>
-                <img class="img-profil" src="{{ image }}" alt="image">
-                
-                <div class="infoProfil">
-                    <div class="mail-profil">
-                        <label for="mail-profil">Addresse mail</label>
-                        <p id="mail-profil">{{ mail }}</p>
+                <div class="profil">
+                    <div>
+                        <img class="img-profil" src="{{ image }}" alt="image">
                     </div>
-                    <div class="username-profil">
-                        <label for="username-profil">Pseudo</label>
-                        <p id="username-profil">{{ username }}</p>
+                    <div class="infoProfil">
+                        <div>
+                            <h3>Addresse mail</h3>
+                            <h4>{{ mail }}</h4>
+                        </div>
+                        <div>
+                            <h3>Pseudo</h3>
+                            <h4>{{ username }}</h4>
+                        </div>
                     </div>
                 </div>
+                <!-- <div style="    position: relative;
+                top: 18rem;">
+                    <form ref='uploadForm' id='uploadForm' action='http://localhost:3000/upload' method='post' encType="multipart/form-data">
+                        <input type="file" name="sampleFile" />
+                        <input type='submit' value='Upload!' />
+                    </form>
+                </div> -->
             </div>
         </div>
         <!-- /#page-content-wrapper -->
